--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@chakra-ui/react": "2.4.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "axios": "^1.7.7",
     "framer-motion": "^11.11.11",
+    "jwt-decode": "^4.0.0",
     "next": "15.0.2",
+    "nookies": "^2.5.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028"
   },
